k8s-prometheus/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-deployment
  template:
    metadata:
      labels:
        app: my-deployment
    spec:
      containers:
      - name: my-pod
        image: waetw/docker-test:V2.0.0
        ports:
        - containerPort: 5000
---
kind: Service
apiVersion: v1
metadata:
  name: app-service
spec:
  selector:
    app: my-deployment
  ports:
  - protocol: TCP
    port: 5050
    targetPort: 5000
  type: LoadBalancer
