k8s-prometheus/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-mongo
spec:
  selector:
    matchLabels:
      app: my-mongo
  template:
    metadata:
      labels:
        app: my-mongo
    spec:
      containers:
      - name: my-mongo
        image: mongo
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
spec:
  selector:
    app: my-mongo
  ports:
  - port: 
    targetPort: 27017
    port: 27017
  type: ClusterIP
